--- a/templates/noprofile.html
+++ b/templates/noprofile.html
@@ -61,7 +61,7 @@
           <div style="float: right;margin-right:30px;">
           <a class="btn addChild" href="{% url 'add_profile' %}" role="button">+Add child</a>
 
-          <a href="#search">Contact</a>
+          <a href="{% url 'contact' %}">Contact</a>
           <a href="#about"><i class="far fa-bell"></i></a>
           <img src="images/user.png" alt="Avatar" class="avatar">
 
