--- a/templates/Uploadactivity.html
+++ b/templates/Uploadactivity.html
@@ -160,7 +160,7 @@
 
               <div class="col-xs-2 box"> <div class="col-lg-6 col-sm-6 col-12">
                     <label class="btn btn-primary upload">
-                        Pdf&hellip; <input type="file" style="display: none;" id="pdffiles" name="pdffiles[]" accept=".pdf" onchange="uploadpdf()">
+                        Pdf&hellip; <input type="file" style="display: none;" id="pdffiles" name="pdffiles[]"  accept=".pdf" onchange="uploadpdf()">
                     </label>
                     <input id="pdf" name="pdf" hidden>
                 </div></div>
@@ -257,7 +257,7 @@ function uploadpdf(){
                                           </div>
                         <!-----------------------------Discription---------------------------------->
                                            <div >
-                                            <label for="description">Discription</label> <a href="#" data-toggle="tooltip" title="Discribe about activity" style="float:right;"> <i class="fas fa-info-circle"></i></a>
+                                            <label for="description">Description</label> <a href="#" data-toggle="tooltip" title="Discribe about activity" style="float:right;"> <i class="fas fa-info-circle"></i></a>
                                             <textarea style="background-color: #F5F5F5; border: 1px solid #ccc;" class="form-control " id="description"  name="description" rows="4" placeholder="About Activity" maxlength="500"></textarea>
                                              </div>
 
@@ -279,8 +279,14 @@ function uploadpdf(){
                                                 <option>Occupational Therapy</option>
                                                 <option>Speech Therapy</option>
                                                 <option>Daily Life</option>
-
-                                       </select>
+                                                <option>Physiotherapy</option>
+                                                <option>Speech and Language Therapy</option>
+                                                <option>Sensory Integration Therapy</option>
+                                                <option>Applied Behavioral Analysis </option>
+                                                <option>Music Therapy</option>
+                                                <option>Physical Therapy</option>
+                                                <option>Academics</option>
+                                        </select>
 
                                   </div><br>
                   <!-----------------------------age Level ------------------------------------>
@@ -288,21 +294,40 @@ function uploadpdf(){
             <div class="form-group row">
              <table class=" col-md-11" style="margin-left: 15px;">
 
-            <tbody >
+            <tbody>
               <tr>
-                <td >
+                <td>
                 <select class="form-control form-control-md" name="mode">
                 <option>Public</option>
                 <option>Private</option>
 
                         </select>
                       </td>
-                <td >
+                <td>
                 <select class="form-control form-control-md" name="age">
                 <option>Age group</option>
-                <option>1-2</option>
-                <option>2-4</option>
-                        <option>4-6</option>
+                <option>1-2 years</option>
+                <option>2-3 years</option>
+                <option>3-4 years</option>
+                <option>4-5 years</option>
+                <option>5-6 years</option>
+                <option>6-7 years</option>
+                <option>7-8 years</option>
+                <option>8-9 years</option>
+                <option>9-10 years</option>
+                <option>10-11 years</option>
+                <option>11-12 years</option>
+                <option>12-13 years</option>
+                <option>13-14 years</option>
+                <option>14-15 years</option>
+                <option>15-16 years</option>
+                <option>16-17 years</option>
+                <option>17-18 years</option>
+                <option>18-19 years</option>
+
+
+
+
 
 
                         </select>
@@ -320,13 +345,56 @@ function uploadpdf(){
                                  <div>
                                     <select class="form-control form-control-md" name="level">
                                             <option>Difficulty Level</option>
-                                            <option>Easy</option>
-                                            <option>Medium</option>
-                                            <option>Difficult</option>
+                                            <option>Beginner</option>
+                                            <option>Instructional</option>
+                                            <option>Independent</option>
 
                                    </select>
 
                                  </div>
+
+                   <div>
+                                        <select class="form-control form-control-md" name="Duration">
+                                                <option>Duration Days</option>
+                                                <option>1</option>
+                                                <option>2</option>
+                                                <option>3</option>
+                                                <option>4</option>
+                                                <option>5</option>
+                                                <option>6</option>
+                                                <option>7</option>
+                                                <option>8</option>
+                                                <option>9</option>
+                                                <option>10</option>
+                                                <option>11</option>
+                                                <option>12</option>
+                                                <option>13</option>
+                                                <option>14</option>
+                                                <option>15</option>
+                                                <option>16</option>
+                                                <option>17</option>
+                                                <option>18</option>
+                                                <option>19</option>
+                                                <option>20</option>
+                                                <option>21</option>
+                                                <option>22</option>
+                                                <option>23</option>
+                                                <option>24</option>
+                                                <option>25</option>
+                                                <option>26</option>
+                                                <option>27</option>
+                                                <option>28</option>
+                                                <option>28</option>
+                                                <option>29</option>
+                                                <option>30</option>
+                                                <option>31</option>
+
+
+                                       </select>
+
+                   </div>
+                    <br>
+
                 </div>
               </div>
 
